# gnupg-windows-libgpg-error

./: CMakeLists.txt  libgpg-error-config.h.in  sys_file.h.in
src/: estream.c  init.c  init.h  mkheader.c  w32-add.h
tests/: t-common.h  t-poll.c  t-stringutils.c
